修改schedule单元测试